# HIT-CS31106-Final-Assignment-Fall-2020

./: Cargo.toml  Contact_of_Von_Brank.dev  Contact_of_Von_Brank.layout  README.md  info.txt  main.cpp  vbkaddlst.cpp  vbkaddlst.h
src/: app.rs  controller.rs  main.rs  model.rs  renderer.rs  screen.rs  ui.rs  utils.rs  view.rs
src/model/: contactmodel.rs
src/renderer/: canvas.rs
src/screen/: canvas.rs  coordinate.rs  viewnode.rs
src/ui/: component.rs  components.rs  layout.rs  page.rs  view.rs
src/ui/component/: Block.rs
src/ui/components/: divider.rs  text.rs
src/ui/layout/: column.rs  page.rs  row.rs
src/ui/page/: contactlist.rs  homeentry.rs
src/ui/view/: view_base.rs  viewable.rs
src/view/: about.rs  contact_detail.rs  contact_list.rs  create_contact.rs  create_phone_book.rs  home_entry.rs  phone_book_list.rs  settings.rs
